--- a/public/app.html
+++ b/public/app.html
@@ -13,11 +13,12 @@
     <title>Carbon Footprint - Dashboard</title>
     <link rel="stylesheet" href="libs/css/jquery-ui.min.css">
     <link rel="stylesheet" href="libs/css/bootstrap.min.css">
+    <link red="stylesheet" href="libs/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="libs/css/iThing.css"> 
     <link rel="stylesheet" href="libs/css/datepicker.css">
     
     <!-- Style -->
-    <link rel="stylesheet" href="libs/css/bootstrap-united.min.css">
+    <link rel="stylesheet" href="libs/css/bootstrap-theme.min.css">
     <!-- <link rel="stylesheet" href="libs/css/bootstrap-united.min.css"> -->
     <!-- <link rel="stylesheet" href="libs/css/bootstrap-select.min.css" /> -->
 
@@ -87,15 +88,21 @@
         </h4>
         <div class="form-group">
       		<button id="butToggle" onClick="toggleMap()">
-            <img heigth="28px" src="images/icon-map.png" alt="Toggle Map" />  
-          <button id="butAbout" onClick="" >
-            <a data-target="#about" data-toggle="modal" href="#">
-              <img height="28px" width="32px" src="images/point-interrogation-ctco.png" alt="About" />
-            </a>
+            <img heigth="32px" width="32px" src="images/icon-map.png" alt="Toggle Map">
           </button>
+          <a data-target="#about" data-toggle="modal" href="#">
+            <button id="butAbout" onClick="" >
+                <img height="32px" width="32px" src="images/point-interrogation-ctco.png" alt="About" />
+            </button>
+          </a>
+          <a target="_blank" href="http://download.apisense.fr/apps/Bee">
+            <button id="butDwl">
+              <img height="32px" width="32px" src="images/app.png" alt="ApiSense" />
+            </button>
+          </a>
         </div>
-       
     	</div>
+
     	<div class="navbar-bar inner">
         	<div class="container-fluid">
 
@@ -117,9 +124,13 @@
 
     <div class="left center" style="text-align: center;">
 	    <p id="pPick"> Please pick a user. You can also change the interval of dates.</p>
-	    <select id="select-user" class="form-control" ng-model="userId" ng-options="u.user as u.user.substring(0,4) for u in users" ng-change="getCarbonFootprint()">
-	        <option id="optionDefault" style="font-weight: bold;" value="">-- List of users --</option>
-	    </select>
+      <form class="form-horizontal" role="form">
+  	    <select id="select-user" class="form-control" data-live-search="true" ng-model="userId" ng-options="u.user as u.user.substring(0,4) for u in users" ng-change="getCarbonFootprint()">
+  	        <option id="optionDefault" style="font-weight: bold;" value="">-- List of users --</option>
+            <option>Blabla</option>
+            <option>Test</option>
+  	    </select>
+      </form>
 
       <div id="calendars" class="form-group" ng-model="dates" cfc-datescalendars >
         <div class="input-group date">
@@ -185,10 +196,10 @@
         		<table style="font-size: 13x;" class="table table-striped table-condensed">
           		<thead>
             		<tr>
-		              <th class="text-center">Transport</th>
+		              <th class="text-center"><span class="thReport">Transport</span><span class="thReportMob">Trans.</span></th>
 		              <th class="text-center">Dist (km)</th>
-		              <th class="text-center">Aggregated rides</th>
-		              <th class="text-center">Total emission (kg eq. CO₂)</th>
+		              <th class="text-center"><span class="thReport">Aggregated rides</span><span class="thReportMob">Agg. Rides</span></th>
+		              <th class="text-center"><span class="thReport">Total emission (kg eq. CO₂)</span><span class="thReportMob">Emission</span></th>
 		              <th class="text-center">Date</th>
             		</tr>
             		<tr class="{{ ride.colorClass }}" ng-repeat="ride in aggRides">
@@ -216,13 +227,14 @@
     </div>
 
 
-    <script src="libs/jquery-2.1.0.min.js"></script>
+    <script src="libs/jquery-2.1.1.min.js"></script>
     <script src="libs/jquery-ui-1.10.4.min.js"></script>
     <script src="libs/moment.min.js"></script>
     <script src="ui.js"></script>
 
     <script src="libs/bootstrap/bootstrap.min.js"></script>
     <script src="libs/bootstrap/docs.min.js"></script>
+    <script src="libs/bootstrap/bootstrap-select.min.js"></script>
 
     <script src="libs/jQDateRangeSlider-min.js"></script>
     <script src="libs/js/bootstrap-datepicker.js"></script>
