ajustement des boutons

--- a/public/app.html
+++ b/public/app.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="Alexandre Bonhomme">
 
-    <link rel="shortcut icon" href="//assets.apisense.com/images/favicon.png">
+    <!-- <link rel="shortcut icon" href="//assets.apisense.com/images/favicon.png">  link to the favicon -->
+    <link rel="shortcut icon" href="images/favicon.png">
 
     <title>Carbon Footprint - Dashboard</title>
     <link rel="stylesheet" href="libs/css/jquery-ui.min.css">
@@ -96,7 +97,7 @@
           </a>
           <a target="_blank" href="http://download.apisense.fr/apps/Bee">
             <button id="butDwl">
-              <img height="32px" width="32px" src="images/app.png" alt="ApiSense" />
+              <img height="32px" width="32px" src="images/Android_Robot_100.png" alt="ApiSense" />
             </button>
           </a>
         </div>
@@ -219,7 +220,7 @@
     <div id="alertBot" class="alert alert-info fade in">
       <div class="container-fluid text-center">
         <a id="aBot" target="_blank" href="http://download.apisense.fr/apps/Bee">Download Apisense, the Android Application for collecting Data</a>
-        <br /><i>This application will allow you to collect data. Then you can select yourself</i>
+        <br /><i>This application will allow you to collect data. Then you can pick yourself on the select list</i>
       </div>
     </div>
 
