modifications des appels, changer de date ne recharge plus tous les users

--- a/public/app.html
+++ b/public/app.html
@@ -125,7 +125,7 @@
     <div class="left center" style="text-align: center;">
 	    <p id="pPick"> Please pick a user. You can also change the interval of dates.</p>
       <form class="form-horizontal" role="form">
-  	    <select id="select-user" class="form-control selectpicker" data-live-search="true" ng-model="userId" ng-options="u.user as u.user.substring(0,4) for u in users" ng-change="getCarbonFootprint()">
+  	    <select id="select-user" class="form-control" data-live-search="true" ng-model="userId" ng-options="u.user as u.user.substring(0,4) for u in users" ng-change="getCarbonFootprint()">
   	        <option id="optionDefault" style="font-weight: bold;" value="">-- List of users --</option>
   	    </select>
       </form>
@@ -145,6 +145,7 @@
 		<!-- Statistics table -->
     	<div style="text-align: center;" class="row">
      	<h2 class="reportTitle" class="sub-header">Reports : </h2>
+          <img class="load" src="images/loading.gif">
       		<div class="table-responsive">
         		<table style="font-size: 13x;" class="table table-striped table-condensed">
           		<thead>
@@ -190,6 +191,7 @@
     	<h2 style="display: inline; font-style: italic;" class="sub-header">0.00kg{{ carbonFootprint }} ; </h2>
       <h3 style="display: inline;">0.00kg/km{{ carbonFootprintPerKm }}</h3>
      	<h2 class="sub-header reportTitle">Reports</h2>
+      <img class="load" src="images/loading.gif">
       		<div class="table-responsive">
         		<table style="font-size: 13x;" class="table table-striped table-condensed">
           		<thead>
