--- a/public/app.html
+++ b/public/app.html
@@ -125,7 +125,7 @@
     <div class="left center" style="text-align: center;">
 	    <p id="pPick"> Please pick a user. You can also change the interval of dates.</p>
       <form class="form-horizontal" role="form">
-  	    <select id="select-user" class="form-control" data-live-search="true" ng-model="userId" ng-options="u.user as u.user.substring(0,4) for u in users" ng-change="getCarbonFootprint()">
+  	    <select id="select-user" class="form-control" data-live-search="true" ng-model="userId" ng-options="u.user as u.user.substring(0,4) for u in users" ng-change="setMinDate(userId);getCarbonFootprint();">
   	        <option id="optionDefault" style="font-weight: bold;" value="">-- List of users --</option>
   	    </select>
       </form>
@@ -133,9 +133,9 @@
       <div id="calendars" class="form-group" ng-model="dates" cfc-datescalendars >
         <div class="input-group date">
           <span class="input-group-addon"><i>From</i></span>
-          <input id="dpFrom" class="calendar form-control" data-provide="datepicker" placeholder=" From" readonly />
+          <input id="dpFrom" class="calendar form-control" ng-model="from" data-provide="datepicker" placeholder=" From" readonly />
           <span class="input-group-addon"><i>To</i></span>
-          <input id="dpTo" class="calendar form-control" data-provide="datepicker" placeholder=" To" readonly />
+          <input id="dpTo" class="calendar form-control" ng-model="to" data-provide="datepicker" placeholder=" To" readonly />
           <span class="input-group-addon"><i class="icon-th glyphicon glyphicon-calendar"></i></span>
         </div>
       </div>
@@ -169,11 +169,12 @@
       		</div>
     	</div>
     	<h1 id="h1CF" style="font-style: italic;" class="page-header" id="carbon-footprint-total">
-      		0.00kg{{ carbonFootprint }}<br>
-      	<small>0.00kg/km{{ carbonFootprintPerKm }}</small>
+      		{{ carbonFootprint }}<br>
+      	<small>{{ carbonFootprintPerKm }}</small>
     	</h1>
    	</div>
 
+    <img class="load2" src="images/loading.gif">
    	<div id="map">
     	<div align="right" id="button-wrapper">
             <button id="butCycleMap" type="button" class="btn btn-success" btn-checkbox ng-model="bCycleMap" ng-change="toggleCycleMap()">
@@ -188,10 +189,9 @@
     <div id="rightTab2" class="center" style="text-align: center;">
 		<!-- Statistics table -->
     	<div style="text-align: center;" class="row">
-    	<h2 style="display: inline; font-style: italic;" class="sub-header">0.00kg{{ carbonFootprint }} ; </h2>
-      <h3 style="display: inline;">0.00kg/km{{ carbonFootprintPerKm }}</h3>
+    	<h2 style="display: block; font-style: italic;" class="sub-header">{{ carbonFootprint }}</h2>
+      <h3 style="display: inline;">{{ carbonFootprintPerKm }}</h3>
      	<h2 class="sub-header reportTitle">Reports</h2>
-      <img class="load" src="images/loading.gif">
       		<div class="table-responsive">
         		<table style="font-size: 13x;" class="table table-striped table-condensed">
           		<thead>
