--- a/public/app.html
+++ b/public/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="CarbonFootprintCalculator">
+<html data-ng-app="CarbonFootprintCalculator">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="dashboard.css">
     
   </head>
-  <body ng-controller="mainController">
+  <body data-ng-controller="mainController">
 
     <!-- About popup -->
     <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="aboutLabel" aria-hidden="true">
@@ -71,9 +71,12 @@
               </a>
             </div>
 
-            <h4><a target="_blank" href="http://download.apisense.fr/apps/Bee">Apisense Application</h4>
+            <h4><a target="_blank" href="http://download.apisense.fr/apps/Bee">Apisense Application</a></h4>
             <div class="row">
-              <div class="col-md-6"><img width="200px" height="200px" src="images/app_qrcode.png" alt="Microsoft" class="img-responsive"></div>
+              <div class="col-md-6"><a href="http://download.apisense.fr/apps/Bee" target="_blank">
+                <img width="200" height="200" src="images/app_qrcode.png" alt="Microsoft" class="img-responsive">
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -81,25 +84,21 @@
     </div>
 
     <!-- Navigation menu -->
-    <div id="navBar" align="center" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="border-radius: 0px 0px 10px 10px; background-color: #222222;">
+    <div id="navBar" style="text-align: center" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	    <div style="float: right;" class="container-fluid">
         <h4 id="abouth4" style="color: grey; margin-top: 15px;">
           <a data-target="#about" data-toggle="modal" href="#">About</a>
         </h4>
         <div class="form-group">
       		<button id="butToggle" onClick="toggleMap()">
-            <img heigth="32px" width="32px" src="images/icon-map.png" alt="Toggle Map">
+            <img src="images/icon-map.png" height="32" width="32" alt="Toggle Map">
           </button>
-          <a data-target="#about" data-toggle="modal" href="#">
-            <button id="butAbout" onClick="" >
-                <img height="32px" width="32px" src="images/point-interrogation-ctco.png" alt="About" />
+            <button data-target="#about" data-toggle="modal" id="butAbout">
+                <img src="images/point-interrogation-ctco.png" height="32" width="32" alt="About" />
             </button>
-          </a>
-          <a target="_blank" href="http://download.apisense.fr/apps/Bee">
-            <button id="butDwl">
-              <img height="32px" width="32px" src="images/Android_Robot_100.png" alt="ApiSense" />
-            </button>
-          </a>
+          <button onclick="window.open('http://download.apisense.fr/apps/Bee')" id="butDwl">
+            <img src="images/Android_Robot_100.png" height="32" width="32" alt="ApiSense" />
+          </button>
         </div>
     	</div>
 
@@ -107,35 +106,35 @@
         	<div class="container-fluid">
 
               <h2 id="h2menu">
-              <a href="http://localhost:9000/map">
+              <a href="http://localhost:9000">
                 Carbon Footprint Calculator
               </a>
               </h2>
 
               <!-- mobile -->
               <h2 id="h2menu2">
-              <a href="http://localhost:9000/map">
+              <a href="http://localhost:9000">
                 CFC
               </a>
               </h2>
         	</div>
         </div>
-    </div><br/ >
+    </div><br />
 
     <div class="left center" style="text-align: center;">
 	    <p id="pPick"> Please pick a user. You can also change the interval of dates.</p>
       <form class="form-horizontal" role="form">
-  	    <select id="select-user" class="form-control" data-live-search="true" ng-model="userId" ng-options="u.user as u.user.substring(0,4) for u in users" ng-change="setMinDate(userId);getCarbonFootprint();">
+  	    <select id="select-user" class="form-control" data-live-search="true" data-ng-model="userId" data-ng-options="u.user as u.user.substring(0,4) for u in users" data-ng-change="setMinDate(userId);getCarbonFootprint();">
   	        <option id="optionDefault" style="font-weight: bold;" value="">-- List of users --</option>
   	    </select>
       </form>
 
-      <div id="calendars" class="form-group" ng-model="dates" cfc-datescalendars >
+      <div id="calendars" class="form-group" data-ng-model="dates" data-cfc-datescalendars >
         <div class="input-group date">
           <span class="input-group-addon"><i>From</i></span>
-          <input id="dpFrom" class="calendar form-control" ng-model="from" data-provide="datepicker" placeholder=" From" readonly />
+          <input id="dpFrom" class="calendar form-control" data-ng-model="from" data-provide="datepicker" placeholder=" From" readonly />
           <span class="input-group-addon"><i>To</i></span>
-          <input id="dpTo" class="calendar form-control" ng-model="to" data-provide="datepicker" placeholder=" To" readonly />
+          <input id="dpTo" class="calendar form-control" data-ng-model="to" data-provide="datepicker" placeholder=" To" readonly />
           <span class="input-group-addon"><i class="icon-th glyphicon glyphicon-calendar"></i></span>
         </div>
       </div>
@@ -144,8 +143,12 @@
     <div id="rightTab" style="text-align: center;">
 		<!-- Statistics table -->
     	<div style="text-align: center;" class="row">
-     	<h2 class="reportTitle" class="sub-header">Reports : </h2>
-          <img class="load" src="images/loading.gif">
+     	<h2 class="reportTitle sub-header">Reports: </h2>
+      <img class="load" src="images/loading.gif" alt="Loading...">
+      <h4 style="display: block;" class="sub-header">
+        {{ carbonFootprint }} <br />
+      <small>{{ carbonFootprintPerKm }}</small>
+      </h4>
       		<div class="table-responsive">
         		<table style="font-size: 13x;" class="table table-striped table-condensed">
           		<thead>
@@ -156,7 +159,7 @@
 		              <th class="text-center">Total emission (kg eq. CO₂)</th>
 		              <th class="text-center">Date</th>
             		</tr>
-            		<tr class="{{ ride.colorClass }}" ng-repeat="ride in aggRides">
+            		<tr class="{{ ride.colorClass }}" data-ng-repeat="ride in aggRides">
 		              <td class="text-center">{{ ride.type }}</td>
 		              <td class="text-center">{{ ride.distance.toFixed(3) }}</td>
 		              <td class="text-center">{{ ride.numberOfRides }}</td>
@@ -168,20 +171,16 @@
        			</table>
       		</div>
     	</div>
-    	<h1 id="h1CF" style="font-style: italic;" class="page-header" id="carbon-footprint-total">
-      		{{ carbonFootprint }}<br>
-      	<small>{{ carbonFootprintPerKm }}</small>
-    	</h1>
    	</div>
 
-    <img class="load2" src="images/loading.gif">
+    <img class="load2" src="images/loading.gif" alt="Loading...">
    	<div id="map">
-    	<div align="right" id="button-wrapper">
-            <button id="butCycleMap" type="button" class="btn btn-success" btn-checkbox ng-model="bCycleMap" ng-change="toggleCycleMap()">
+    	<div style="text-align:right;" id="button-wrapper">
+            <button id="butCycleMap" type="button" class="btn btn-success" data-btn-checkbox data-ng-model="bCycleMap" data-ng-change="toggleCycleMap()">
             	Cycle paths
             </button>
             <br />
-            <button id="butCluster" type="button" class="btn btn-warning" btn-checkbox ng-model="bClusters" ng-change="toggleClusters()">
+            <button id="butCluster" type="button" class="btn btn-warning" data-btn-checkbox data-ng-model="bClusters" data-ng-change="toggleClusters()">
             	Clusters</button>
          </div> 
     </div>
@@ -202,7 +201,7 @@
 		              <th class="text-center"><span class="thReport">Total emission (kg eq. CO₂)</span><span class="thReportMob">Emission</span></th>
 		              <th class="text-center">Date</th>
             		</tr>
-            		<tr class="{{ ride.colorClass }}" ng-repeat="ride in aggRides">
+            		<tr class="{{ ride.colorClass }}" data-ng-repeat="ride in aggRides">
 		              <td class="text-center">{{ ride.type }}</td>
 		              <td class="text-center">{{ ride.distance.toFixed(3) }}</td>
 		              <td class="text-center">{{ ride.numberOfRides }}</td>
@@ -219,7 +218,7 @@
     <!-- Bottom -->
     <hr id="hrBot">
 
-    <div id="alertBot" class="alert alert-info fade in">
+    <div id="alertBot">
       <div class="container-fluid text-center">
         <a id="aBot" target="_blank" href="http://download.apisense.fr/apps/Bee">Download Apisense, the Android Application for collecting Data</a>
         <br /><i>This application will allow you to collect data. Then you can pick yourself on the select list</i>
