--- a/public/app.html
+++ b/public/app.html
@@ -90,7 +90,7 @@
           <a onclick="toggleEmission();">Used values</a> --
           <a data-target="#about" data-toggle="modal" href="#">About</a>
         </h4>
-        <div id="emission" style="position: absolute; padding-top: 12px; width: 180px;">
+        <div id="emission" style="display: none; position: absolute; padding-top: 12px; width: 180px;">
           <div class="row rowEmission">
           <div class="col-md-1 progress-bar-header-img">
             <img src="/images/plane-icon.png" alt="plane-icon">
@@ -204,7 +204,7 @@
     	<div style="text-align: center;" class="row">
      	<h2 class="reportTitle sub-header">Reports: </h2>
       <img class="load" src="images/loading.gif" alt="Loading...">
-      <h4 style="display: none;" class="sub-header">
+      <h4 style="display: block;" class="sub-header">
         {{ carbonFootprint }} <br />
       <small>{{ carbonFootprintPerKm }}</small>
       </h4>
@@ -244,62 +244,6 @@
             	Clusters</button>
          </div> 
     </div>
-
-    <!--
-    <br />
-    <div class="left center">
-      <div class="row">
-          <div class="col-md-1 progress-bar-header-img">
-            <img src="/images/plane-icon.png" alt="plane-icon">
-          </div>
-          <div class="col-md-8">
-            <div class="progress">
-              <div class="progress-bar progress-bar-plane" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">50</div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-1 progress-bar-header-img">
-            <img src="/images/car-icon.png" alt="car-icon">
-          </div>
-          <div class="col-md-8">
-            <div class="progress">
-              <div class="progress-bar progress-bar-car" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-1 progress-bar-header-img">
-            <img src="/images/bus-icon.png" alt="bus-icon">
-          </div>
-          <div class="col-md-8">
-            <div class="progress">
-              <div class="progress-bar progress-bar-bus" role="progressbar" aria-valuenow="22" aria-valuemin="0" aria-valuemax="100" style="width: 22%"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-1 progress-bar-header-img">
-            <img src="/images/train-icon.png" alt="train-icon">
-          </div>
-          <div class="col-md-8">
-            <div class="progress">
-              <div class="progress-bar progress-bar-train" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-1 progress-bar-header-img">
-            <img src="/images/walk-icon.png" alt="walk-icon">
-          </div>
-          <div class="col-md-8">
-            <div class="progress">
-              <div class="progress-bar progress-bar-train" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-            </div>
-          </div>
-        </div>
-    </div>
-    -->
 
     <div id="rightTab2" class="center" style="text-align: center;">
 		<!-- Statistics table -->
